@@ -5,7 +5,7 @@
 	<TITLE></TITLE>
 	<META NAME="GENERATOR" CONTENT="OpenOffice.org 1.1.3  (Linux)">
 	<META NAME="CREATED" CONTENT="20050504;17350500">
-	<META NAME="CHANGED" CONTENT="20050505;23534400">
+	<META NAME="CHANGED" CONTENT="20050506;11303900">
 </HEAD>
 <BODY LANG="en-GB" DIR="LTR">
 <H1>POSIX Threads for Windows – Pthreads-w32</H1>
@@ -134,7 +134,7 @@
 <P STYLE="margin-left: 2cm"><A HREF="pthread_win32_attach_detach_np.html"><B>pthread_win32_thread_attach_np</B></A></P>
 <P STYLE="margin-left: 2cm"><A HREF="pthread_win32_attach_detach_np.html"><B>pthread_win32_thread_detach_np</B></A></P>
 <H2>Other</H2>
-<P STYLE="margin-left: 2cm"><A HREF="nonPortableIssues.html"><B>Non-portable
+<P STYLE="margin-left: 2cm"><A HREF="PortabilityIssues.html"><B>Portability
 issues</B></A></P>
 </BODY>
 </HTML>
